<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pill Tracker</string>
    <string name="med_log">Medication Log</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="reminders">Reminders</string>
    <string name="doctors">Doctors</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>

    <color name="black">#CCCCCC</color>

    <string name="title_activity_med_log">Medication Log</string>
    <string name="today">Today</string>
    <string name="ten_am">10 AM</string>
    <string name="pill">Pill</string>
    <string name="vitamin">Vitamin</string>
    <string name="ten_pm">10 PM</string>
    <string name="nasal">Nasal Spray</string>
    <string name="title_activity_prescription">Prescriptions</string>
    <string name="add">Add</string>
    <string name="title_activity_doctors">Doctors</string>
    <string name="eye_doctor">Eye Doctor</string>
    <string name="family_physician">Family Physician</string>
    <string name="orthopedic">Orthopedic</string>
    <string name="title_activity_notes">Notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="to_do">To Do</string>
    <string name="blah">BlahBlahBlah</string>
    <string name="title_activity_pharmacies">Pharmacies</string>

    <string-array name="miles">
        <item>10 miles</item>
        <item>15 miles</item>
        <item>20 miles</item>
        <item> 50 miles</item>
    </string-array>

    <string name="display">Display pharmacies within:</string>
    <string name="find">Find</string>
    <string name="title_activity_prescription_edit">Edit Prescription</string>
    <string name="title_activity_edit_prescription">Edit Prescriptions</string>
    <string name="name">Name</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="days">Set Days</string>
    <string name="time">Set Time</string>
    <string name="prescriber">Prescriber</string>
    <string name="comments">Comments</string>
    <string name="title_activity_doctor_edit">Edit Doctor</string>
    <string name="send_alert">Send Alert</string>
    <string name="phone">Phone</string>
    <string name="number">911</string>
    <string name="email">E-mail</string>
    <string name="email_address">iDoctor@eyes.com</string>
    <string name="address">Address</string>
    <string name="addy">500 Forbes Ave</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="title_activity_settings">Settings</string>
    <string name="location">My Location</string>
    <string name="wireless">Use wireless networks</string>
    <string name="gps">Use GPS satellites</string>
    <string name="save">Save</string>

</resources>
